# saori-qrcode

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  check_and_test.yml
src/: lib.rs  procedure.rs  qrcode.rs  response.rs
