[package]
name = "saori-qrcode"
version = "0.1.1"
authors = ["Don"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"
description = "SAORI to make QR Code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.14.0"
image = "0.25.1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["winbase", "libloaderapi", "stringapiset"]}

[dev-dependencies]
tempfile = "3.10.1"
encoding_rs = "0.8.33"

[lib]
name = "saori_qrcode"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
